--- a/index.html
+++ b/index.html
@@ -678,21 +678,69 @@
     </div>
 
     <div class="container">
-        <div class="card text-center m-5">
-            <div class="card-header">
-                Recommendation
+        <div class="row">
+            <div class="col">
+                <div class="card text-center m-5">
+                    <div class="card-header">
+                        Recommendation
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title"><strong>Frank Cronemberg (MSc.(SE), MBCS(UK))</strong></h5>
+                        <p>Technical Lead / Engineering Manager at Sysco Labs</p>
+                        <p class="card-text">"Had privilege of working together with this great guy in academics and
+                            projects.
+                            He is an efficient and hardworking result oriented team player. Dedicated to his work and
+                            his
+                            attitudes and qualities are always beyond one’s expectations. I would highly recommend him
+                            for any
+                            critical projects."</p>
+                        <a href="#" class="btn btn-primary"><i class="bi bi-linkedin"></i></a>
+                    </div>
+                    <div class="card-footer text-body-secondary">
+                        December 11, 2023, Frank was Sharada’s teacher
+                    </div>
+                </div>
             </div>
-            <div class="card-body">
-                <h5 class="card-title"><strong>Frank Cronemberg (MSc.(SE), MBCS(UK))</strong></h5>
-                <p>Technical Lead / Engineering Manager at Sysco Labs</p>
-                <p class="card-text">"Had privilege of working together with this great guy in academics and projects.
-                    He is an efficient and hardworking result oriented team player. Dedicated to his work and his
-                    attitudes and qualities are always beyond one’s expectations. I would highly recommend him for any
-                    critical projects."</p>
-                <a href="#" class="btn btn-primary"><i class="bi bi-linkedin"></i></a>
+            <div class="col">
+                <div class="card text-center m-5">
+                    <div class="card-header">
+                        Recommendation
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title"><strong>Frank Cronemberg (MSc.(SE), MBCS(UK))</strong></h5>
+                        <p>Technical Lead / Engineering Manager at Sysco Labs</p>
+                        <p class="card-text">"Had privilege of working together with this great guy in academics and
+                            projects.
+                            He is an efficient and hardworking result oriented team player. Dedicated to his work and
+                            his
+                            attitudes and qualities are always beyond one’s expectations. I would highly recommend him
+                            for any
+                            critical projects."</p>
+                        <a href="#" class="btn btn-primary"><i class="bi bi-linkedin"></i></a>
+                    </div>
+                    <div class="card-footer text-body-secondary">
+                        December 11, 2023, Frank was Sharada’s teacher
+                    </div>
+                </div>
             </div>
-            <div class="card-footer text-body-secondary">
-                December 11, 2023, Frank was Sharada’s teacher
+            <div class="col">
+                <div class="card text-center m-5">
+                    <div class="card-header">
+                        Recommendation
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title"><strong>Frank Cronemberg (MSc.(SE), MBCS(UK))</strong></h5>
+                        <p>Technical Lead / Engineering Manager at Sysco Labs</p>
+                        <p class="card-text">"Had privilege of working together with this great guy in academics and projects.
+                            He is an efficient and hardworking result oriented team player. Dedicated to his work and his
+                            attitudes and qualities are always beyond one’s expectations. I would highly recommend him for any
+                            critical projects."</p>
+                        <a href="https://www.linkedin.com/in/sharada-marasinha/" class="btn btn-primary"><i class="bi bi-linkedin"></i></a>
+                    </div>
+                    <div class="card-footer text-body-secondary">
+                        December 11, 2023, Frank was Sharada’s teacher
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -740,7 +788,7 @@
             </div>
 
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-                <li class="ms-3"><a class="text-body-secondary" href="#"><i class="bi bi-linkedin"></i></a></li>
+                <li class="ms-3"><a class="text-body-secondary" href="https://www.linkedin.com/in/sharada-marasinha/"><i class="bi bi-linkedin"></i></a></li>
                 <li class="ms-3"><a class="text-body-secondary" href="#"><i class="bi bi-facebook"></i></a></li>
                 <li class="ms-3"><a class="text-body-secondary" href="#"><i class="bi bi-instagram"></i></a></li>
             </ul>
